lab8/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: engineering-lab8
  namespace: engineering-lab8
spec:
  ingressClassName: nginx
  rules:
    - host: engineering.lab8.zelenkov-labs.ru
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: engineering-lab8-frontend
                port:
                  number: 80
